--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
     "declaration": false,
     "experimentalDecorators": true,
     "moduleResolution": "node",
+    "noImplicitAny": false,
     "importHelpers": true,
     "target": "ES2022",
     "module": "ES2022",
